crates/oxidoc/tests/snapshots/golden_writer__native__common__escape-flanking.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "a"
    , Space
    , Str "*"
    , Space
    , Str "b"
    , Space
    , Str "`"
    , Space
    , Str "c"
    , Space
    , Str "|"
    , Space
    , Str "d"
    , Space
    , Str "and"
    , Space
    , Str "trailing_ref_"
    ]
]
