crates/oxidoc/tests/snapshots/golden_writer__native__common__escape-specials.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "a"
    , Space
    , Str "&"
    , Space
    , Str "b"
    , Space
    , Str "%"
    , Space
    , Str "c"
    , Space
    , Str "#"
    , Space
    , Str "d"
    , Space
    , Str "_"
    , Space
    , Str "e"
    , Space
    , Str "$"
    , Space
    , Str "f"
    , Space
    , Str "{"
    , Space
    , Str "g"
    , Space
    , Str "}"
    , Space
    , Str "h"
    , Space
    , Str "^"
    , Space
    , Str "i"
    , Space
    , Str "~"
    , Space
    , Str "j"
    ]
]
