crates/oxidoc/tests/snapshots/golden_writer__native__common__footnote-multipara.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "ref"
    , Note
        [ Para [ Str "first" , Space , Str "paragraph" ]
        , Para [ Str "second" , Space , Str "paragraph" ]
        ]
    ]
]
