crates/oxidoc/tests/snapshots/golden_writer__native__common__footnote-simple.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "ref"
    , Note
        [ Para
            [ Str "the" , Space , Str "note" , Space , Str "body" ]
        ]
    ]
]
