crates/oxidoc/tests/snapshots/golden_writer__native__common__footnote-two.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "x"
    , Note [ Para [ Str "first" ] ]
    , Space
    , Str "y"
    , Note [ Para [ Str "second" ] ]
    ]
]
