crates/oxidoc/tests/snapshots/golden_writer__native__common__hard-break.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "first"
    , Space
    , Str "line"
    , LineBreak
    , Str "second"
    , Space
    , Str "line"
    ]
]
