crates/oxidoc/tests/snapshots/golden_writer__native__common__header-attr.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Header
    1
    ( "anchor" , [ "cls" ] , [ ( "key" , "val" ) ] )
    [ Str "Titled" ]
]
